# rmgo

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml
rmgo_ws/src/rmgo_bringup/: CMakeLists.txt  package.xml
rmgo_ws/src/rmgo_bringup/config/: omni_infantry.yaml  omni_infantry_gz.yaml
rmgo_ws/src/rmgo_bringup/launch/: bringup.launch.py
rmgo_ws/src/rmgo_core/: CMakeLists.txt  package.xml  rmgo_core_plugins.xml  rmgo_hardware_plugins.xml
rmgo_ws/src/rmgo_core/config/controller/chassis/: chassis_controller_config.yaml  chassis_power_controller_config.yaml  omni_wheel_controller_config.yaml
rmgo_ws/src/rmgo_core/config/controller/gimbal/: simple_gimbal_controller_config.yaml
rmgo_ws/src/rmgo_core/config/controller/pid/: error_pid_controller_config.yaml  joint_velocity_pid_controller_config.yaml  wheel_velocity_pid_controller_config.yaml
rmgo_ws/src/rmgo_core/config/controller/remote/: teleop_remote_controller_config.yaml
rmgo_ws/src/rmgo_core/config/controller/shooter/: bullet_feeder_controller_17mm_config.yaml  friction_wheel_controller_config.yaml  heat_controller_config.yaml
rmgo_ws/src/rmgo_core/include/rmgo_core/: remote.hpp  remote_controller.hpp  teleop_remote.hpp
rmgo_ws/src/rmgo_core/include/rmgo_core/controller/: chassis_power_policy.hpp
rmgo_ws/src/rmgo_core/include/rmgo_core/gimbal/: two_axis_gimbal_solver.hpp
rmgo_ws/src/rmgo_core/include/rmgo_core/interface/: command_state_interfaces.hpp  io_state_interfaces.hpp  reference_interfaces.hpp
rmgo_ws/src/rmgo_core/include/rmgo_core/pid/: pid_calculator.hpp
rmgo_ws/src/rmgo_core/include/rmgo_core/referee/: referee_interaction.hpp  referee_protocol.hpp  referee_snapshot.hpp  referee_transfer_registry.hpp  referee_ui.hpp
rmgo_ws/src/rmgo_core/src/controller/chassis/: chassis_controller.cpp  chassis_controller_config.yaml  chassis_power_controller.cpp  chassis_power_controller_config.yaml  omni_wheel_controller.cpp  omni_wheel_controller_config.yaml
rmgo_ws/src/rmgo_core/src/controller/gimbal/: gimbal_simulation_controller.cpp  gimbal_simulation_controller_config.yaml  gimbal_tf_builder.hpp  simple_gimbal_controller.cpp  simple_gimbal_controller_config.yaml  two_axis_gimbal_solver.hpp
rmgo_ws/src/rmgo_core/src/controller/pid/: error_pid_controller.cpp  error_pid_controller_config.yaml  joint_velocity_pid_controller.cpp  joint_velocity_pid_controller_config.yaml  pid_calculator.hpp  wheel_velocity_pid_controller.cpp
rmgo_ws/src/rmgo_core/src/controller/referee/: referee_ui_controller.cpp
rmgo_ws/src/rmgo_core/src/controller/remote/: teleop_remote_controller.cpp  teleop_remote_controller_config.yaml
rmgo_ws/src/rmgo_core/src/controller/shooter/: bullet_feeder_controller_17mm.cpp  bullet_feeder_controller_17mm_config.yaml  friction_wheel_controller.cpp  friction_wheel_controller_config.yaml  heat_controller.cpp  heat_controller_config.yaml
rmgo_ws/src/rmgo_core/src/hardware/: command_endpoint_gz_interface.cpp  command_gz_interface.cpp  referee_gz_system_interface.cpp  referee_system_interface.cpp
rmgo_ws/src/rmgo_core/src/hardware/omni_infantry/: omni_infantry_gz_interface.cpp
rmgo_ws/src/rmgo_core/src/hardware/refere/: referee_gz_system_interface.cpp  referee_interaction.cpp  referee_protocol.cpp  referee_system_interface.cpp  referee_transfer_registry.cpp  referee_ui.cpp
rmgo_ws/src/rmgo_core/src/interface/: command_gz_interface.cpp  mock_io_system_interface.cpp  omni_infantry_gz_interface.cpp  teleop_remote.cpp
rmgo_ws/src/rmgo_core/src/interface/omni_infantry/: README.md
rmgo_ws/src/rmgo_core/src/referee/: interaction.cpp  interaction.hpp  protocol.cpp  protocol.hpp  referee_protocol.cpp  status_sink.hpp  transfer_registry.hpp
rmgo_ws/src/rmgo_core/src/referee/controller/: referee_ui_controller.cpp
rmgo_ws/src/rmgo_core/src/referee/hardware/: referee_gz_system_interface.cpp  referee_system_interface.cpp
rmgo_ws/src/rmgo_core/src/referee/ui/: interaction_ui.cpp  profile.cpp  profile.hpp  referee_ui.cpp  referee_ui.hpp  shape.cpp  ui.hpp  ui_internal.hpp
rmgo_ws/src/rmgo_description/: CMakeLists.txt  package.xml
rmgo_ws/src/rmgo_description/config/: omni_infantry_controllers.yaml
rmgo_ws/src/rmgo_description/include/rmgo_description/: tf_description.hpp
rmgo_ws/src/rmgo_description/launch/: description.launch.py  display.launch.py
rmgo_ws/src/rmgo_description/rviz/: display.rviz
rmgo_ws/src/rmgo_description/urdf/: command_endpoints.xacro  omni_infantry.urdf.xacro  omni_infantry_gz.urdf.xacro  rmgo.urdf.xacro
rmgo_ws/src/rmgo_msg/: CMakeLists.txt  package.xml
rmgo_ws/src/rmgo_msg/msg/: CapacitorStatus.msg  ChassisStatus.msg  GameRobotStatus.msg  GameStatus.msg  GimbalStatus.msg  PowerHeatData.msg  RefereeStatus.msg  RemoteStatus.msg  ShooterStatus.msg  TargetStatus.msg
rmgo_ws/src/rmgo_referee/: CMakeLists.txt  package.xml
rmgo_ws/src/rmgo_referee/src/: frame.hpp  interaction.cpp  interaction.hpp  protocol.cpp  protocol.hpp  status.cpp  status.hpp  transfer.hpp
rmgo_ws/src/rmgo_referee/src/app/: config.hpp  main.cpp  node.cpp  serial.hpp  translator.hpp  transport.hpp
rmgo_ws/src/rmgo_referee/src/app/ui/: omni_infantry.cpp  state_adapter.hpp  ui.cpp  ui.hpp
rmgo_ws/src/rmgo_referee/src/command/: endpoint.hpp  interaction.hpp  result.hpp
rmgo_ws/src/rmgo_referee/src/node/: referee_node.cpp
rmgo_ws/src/rmgo_referee/src/referee/: interaction.cpp  interaction.hpp  protocol.cpp  protocol.hpp  status.cpp  status.hpp  status_sink.hpp
rmgo_ws/src/rmgo_referee/src/referee/node/: referee_node.cpp
rmgo_ws/src/rmgo_referee/src/referee/ui/: interaction_ui.cpp  profile.cpp  shape.cpp  ui.hpp  ui_internal.hpp
rmgo_ws/src/rmgo_referee/src/status/: field.hpp  status.hpp
rmgo_ws/src/rmgo_referee/src/ui/: interaction_ui.cpp  profile.cpp  shape.cpp  ui.hpp  ui_internal.hpp
rmgo_ws/src/rmgo_utility/: CMakeLists.txt  package.xml
rmgo_ws/src/rmgo_utility/include/rmgo_utility/: controller_interface_mixin.hpp  node_mixin.hpp  scalar_interface.hpp  scalar_interface_mixin.hpp
(+28 files in other folders)
