<?xml version="1.0"?>
<package format="3">
  <name>rmgo_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the rmgo robot stack.</description>
  <maintainer email="todo@rmgo.local">rmgo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rmgo_core</exec_depend>
  <exec_depend>rmgo_description</exec_depend>
  <exec_depend>rmgo_msg</exec_depend>
  <exec_depend>rmgo_referee</exec_depend>
  <exec_depend>rmgo_utility</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
