<?xml version="1.0"?>
<package format="3">
  <name>rmgo_core</name>
  <version>0.0.0</version>
  <description>Core interfaces and runtime components for rmgo.</description>
  <maintainer email="todo@rmgo.local">rmgo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
