<?xml version="1.0"?>
<package format="3">
  <name>rmgo_referee</name>
  <version>0.0.0</version>
  <description>Referee system transport, status, and UI node for rmgo.</description>
  <maintainer email="todo@rmgo.local">rmgo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmgo_msg</depend>
  <depend>rmgo_utility</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
