<?xml version="1.0"?>
<package format="3">
  <name>rmgo_utility</name>
  <version>0.0.0</version>
  <description>Shared utility code and configuration helpers for rmgo.</description>
  <maintainer email="todo@rmgo.local">rmgo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
